whoami/01-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoamiv1
  namespace: app
  labels:
    app: containous
    name: whoamiv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containous
      task: whoamiv1
  template:
    metadata:
      labels:
        app: containous
        task: whoamiv1
    spec:
      containers:
        - name: whoamiv1
          image: traefik/traefikee-webapp-demo:v2
          args:
            - -ascii
            - -name=WHOAMI
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  name: whoamiv1
  namespace: app
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: containous
    task: whoamiv1
