whoami/03-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.ds36.net`)
      kind: Rule
      services:
        - name: whoamiv1
          port: 80
          namespace: app
  tls:
    secretName: whoami-prod
